--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <audio controls></audio>
+    <button>Start recording</button>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
