--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <button>Start recording</button>
+    <button id="record">Record</button>
+    <button id="request-mic">Request Mic</button>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
