--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <button id="record">Record</button>
     <audio controls></audio>
+    <textarea name="" id="log" cols="30" rows="10"></textarea>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
