--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <button id="record">Record</button>
+    <button id="request">Request</button>
     <audio controls></audio>
     <textarea name="" id="log" cols="30" rows="10"></textarea>
     <!--
