--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <button id="record">Record</button>
     <button id="request">Request</button>
-    <audio controls></audio>
+    <audio controls autoplay playsinline></audio>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
