--- a/public/index.html
+++ b/public/index.html
@@ -28,9 +28,12 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <button id="record">Record</button>
-    <button id="request">Request</button>
-    <audio controls autoplay playsinline></audio>
+    <button id="btn-start-recording">Start Recording</button>
+    <button id="btn-stop-recording" disabled>Stop Recording</button>
+    <button id="btn-release-microphone" disabled>Release Microphone</button>
+    <div>
+      <audio controls autoplay playsinline></audio>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
