--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,12 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <button id="record">Record</button>
-    <audio controls autoplay playsinline></audio>
+    <button id="record-one">Record One</button>
+    <button id="record-two">Record Two</button>
+    <button id="record-three">Record Three</button>
+    <button id="record-four">Record Four</button>
+    <button id="toggle-metronome">Toggle Metronome</button>
+    <div id="countdown"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
